# websocket-rs

./: .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README.pypi.md  README.zh-TW.md  auto_merge_and_release.sh  benchmark.py  monitor_and_merge.sh  pyproject.toml  pytest.ini  requirements.txt  test.py  test_websocket.py
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: pr.yml  release.yml  test.yml
benches/: ws_echo_fastws.rs
docs/: BENCHMARKS.md  BENCHMARKS.zh-TW.md  MIGRATION.md  OPTIMIZATION_RESEARCH.md  PUBLISHING.md
examples/: test_monkeypatch.py
python/websocket_rs/: __init__.py
scripts/: build-pgo.sh  pre-check.sh  prepare-release.sh  tag-release.sh  test.sh
src/: async_client.rs  lib.rs  native_client.rs  sync_client.rs
tests/: bench_native.py  bench_native_rloop.py  bench_socks5_handshake.py  bench_vs_picows_server.py  bench_vs_rust_server.py  benchmark_latency.py  benchmark_micro.py  benchmark_optimized.py  benchmark_picows_parity.py  benchmark_server_timestamp.py  benchmark_three_servers.py  benchmark_tls_parity.py  benchmark_v2.py  diagnose_server_pattern.py  perf_pipelined_64k.py  poc_asyncio_protocol.py  test_compatibility.py  test_monkeypatch.py  test_native_features.py  test_timeout_and_errors.py  test_websocket.py
websocket_rs/: __init__.py  __init__.pyi  async_client.pyi  auto_patch.py  native_client.pyi  patch.py  sync.pyi
websocket_rs/sync/: __init__.pyi  client.pyi
