[package]
name = "websocket_rs"
version = "0.2.0"
edition = "2021"

[lib]
name = "websocket_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py312"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
parking_lot = "0.12"

[lints.rust]
non_local_definitions = "allow"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
