[package]
name = "websocket_rs"
version = "0.7.0"
edition = "2021"
authors = ["coseto6125 <enorenor@gmail.com>"]
description = "High-performance WebSocket client library for Python using Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/coseto6125/websocket-rs"
homepage = "https://github.com/coseto6125/websocket-rs"
documentation = "https://github.com/coseto6125/websocket-rs#readme"
keywords = ["websocket", "python", "async", "performance"]
categories = ["network-programming", "asynchronous"]

[lib]
name = "websocket_rs"
crate-type = ["cdylib"]

[[bin]]
name = "ws_echo_server"
path = "src/bin/ws_echo_server.rs"
required-features = ["echo-server-bin"]

[[bin]]
name = "ws_echo_fastws"
path = "src/bin/ws_echo_fastws.rs"
required-features = ["echo-server-bin"]

[features]
echo-server-bin = ["dep:fastwebsockets", "dep:hyper", "dep:hyper-util", "dep:http-body-util"]

[dependencies.fastwebsockets]
version = "0.10"
features = ["upgrade"]
optional = true

[dependencies.hyper]
version = "1"
features = ["server", "http1"]
optional = true

[dependencies.hyper-util]
version = "0.1"
features = ["tokio"]
optional = true

[dependencies.http-body-util]
version = "0.1"
optional = true

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py312"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake", "__rustls-tls", "rustls-tls-native-roots"] }
tungstenite = { version = "0.29", default-features = false, features = ["handshake", "__rustls-tls", "rustls-tls-native-roots"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
parking_lot = "0.12"
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
bytes = "1.11.0"
url = "2.5"
tokio-socks = "0.5.2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
rustls-pki-types = "1"
rustls-native-certs = "0.8"
rustls-pemfile = "2"
sha1 = "0.11"
base64 = "0.22"
rand = "0.10"
flate2 = "1"
libc = "0.2"

[lints.rust]
non_local_definitions = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
debug = false
strip = true

[profile.profiling]
inherits = "release"
debug = 1
strip = false
